--- a/CVSWeb/src/main/java/com/tjoeun/mybatis/db.properties
+++ b/CVSWeb/src/main/java/com/tjoeun/mybatis/db.properties
@@ -1,4 +1,4 @@
 driver=oracle.jdbc.driver.OracleDriver
 url=jdbc:oracle:thin:@localhost:1521:xe
-username=rok
-password=0000
+username=tjoeunit
+password=8268
