--- a/CVSWeb/.project
+++ b/CVSWeb/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>CVSWebcc</name>
+	<name>CVSWeb</name>
 	<comment></comment>
 	<projects>
 	</projects>
